--- a/site/themes/tvpp/sass/components/nav.scss
+++ b/site/themes/tvpp/sass/components/nav.scss
@@ -82,3 +82,8 @@
         background: #aaa;
     }
 }
+
+.navbar-fixed-bottom .navbar-collapse,
+.navbar-fixed-top .navbar-collapse {
+    max-height: 640px;
+}
